; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-engine.c_cluster_precise_cron.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-engine.c_cluster_precise_cron.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAIN_REPLICA = common dso_local global i64 0, align 8
@MANIFEST = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cluster_precise_cron() #0 {
  %1 = load i64, i64* @MAIN_REPLICA, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @update_binlog_position()
  br label %7

5:                                                ; preds = %0
  %6 = call i32 (...) @request_binlog()
  br label %7

7:                                                ; preds = %5, %3
  %8 = load i64, i64* @MANIFEST, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %7
  %11 = call i32 (...) @check_manifest_updates()
  br label %12

12:                                               ; preds = %10, %7
  %13 = call i32 (...) @delete_dead_connections()
  ret void
}

declare dso_local i32 @update_binlog_position(...) #1

declare dso_local i32 @request_binlog(...) #1

declare dso_local i32 @check_manifest_updates(...) #1

declare dso_local i32 @delete_dead_connections(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
